2008-08-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, po/POTFILES.in,
   plugins/splitwindow.c, plugins/Makefile.am, plugins/makefile.win32:
   Add Split Window plugin (work-in-progress).


2008-08-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Add assert statements to check that the StyleSet styling arrays are
   not exceeded.
   Make highlighting_get_style() work with all filetypes.
 * src/highlighting.c, src/highlighting.h, src/plugindata.h:
   Rename HighlightingStyle to GeanyLexerStyle.
   Add dox for highlighting_get_style(), GeanyLexerStyle, mentioning
   SCI_STYLEGETFORE.


2008-08-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c, src/editor.c, src/editor.h:
   Add editor_destroy() to dispose of a GeanyEditor struct (in future
   we may want to do more than just free it).
   Fix editor.h dox description to be more informative for the API
   (and move dox from editor.h to editor.c).


2008-08-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix not using auto-completion in strings and comments (patch by
   Jason Oster, thanks; fixes #2057979).
 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Don't disable 'Detect from file' indent type pref when 'Tabs and
   Spaces' is selected.
 * src/document.c:
   Don't warn about a missing file on disk more than once (otherwise
   sometimes it's too difficult to close the file before getting the
   prompt).
 * src/document.c:
   Detect 'Tabs and Spaces' indent mode on finding one or more hard
   tabs before a soft tab at the start of several lines, and also when
   the first indent symbol count is not mainly tabs or mainly spaces.


2008-08-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Support detecting 'Tabs and Spaces' indent mode when opening a file.

